<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/SterlingButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#90B1190E"
        android:text="@string/sterling"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/BRLButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BRLButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="49dp"
        android:backgroundTint="#9018801C"
        android:text="@string/brazilian_real"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/DollarButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SterlingButton" />

    <Button
        android:id="@+id/DollarButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="51dp"
        android:backgroundTint="#902196F3"
        android:text="@string/dollar"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/RupeeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BRLButton" />

    <Button
        android:id="@+id/RupeeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#90FF9800"
        android:text="@string/rupee"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DollarButton" />

</androidx.constraintlayout.widget.ConstraintLayout>